# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[package]
name = "autograd"
version = "0.0.1"
authors = ["Kibeom Kim <kk1674@nyu.edu>"]

[[bin]]
name = "autograd-bin"
test = false
doc = false
