# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

# TODO Comprehensive configurations.
# TODO Setup contributor license agreement.

[package]
name = "autograd"
version = "0.1.0"
authors = ["Kibeom Kim <kk1674@nyu.edu>"]

[[bin]]
name = "autograd_bin"
test = false
doc = false

[dependencies]
num = "*"
